[package]
name = "rust-api"
version = "0.1.0"
authors = ["Nick"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"

postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = "0.4.10"
diesel = { version = "^1.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
